# move-vscode-extension

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  package-lock.json  rustfmt.toml
crates/aptos-analyzer/: Cargo.toml
crates/aptos-analyzer/src/: _tests.rs  cli.rs  command.rs  config.rs  diagnostics.rs  file_changes.rs  flycheck.rs  global_state.rs  handlers.rs  lib.rs  line_index.rs  lsp.rs  main_loop.rs  mem_docs.rs  movefmt.rs  op_queue.rs  project_folders.rs  reload.rs  task_pool.rs  toolchain.rs  tracing.rs  version.rs
crates/aptos-analyzer/src/cli/: check.rs  diagnostics.rs
crates/aptos-analyzer/src/config/: config_change.rs  options.rs  utils.rs  validation.rs
crates/aptos-analyzer/src/diagnostics/: to_proto.rs
crates/aptos-analyzer/src/flycheck/: compiler_diagnostic.rs
crates/aptos-analyzer/src/handlers/: dispatch.rs  notification.rs  request.rs
crates/aptos-analyzer/src/lsp/: capabilities.rs  ext.rs  from_proto.rs  semantic_tokens.rs  to_proto.rs  utils.rs
crates/aptos-analyzer/src/tracing/: config.rs  hprof.rs  json.rs
crates/aptos-analyzer/tests/slow-tests/: main.rs  support.rs
crates/base-db/: Cargo.toml
crates/base-db/src/: change.rs  db.rs  input.rs  inputs.rs  lib.rs  new_db.rs  package.rs  package_root.rs  source_db.rs  source_root.rs
crates/ide/: Cargo.toml
crates/ide-completion/: Cargo.toml
crates/ide-completion/src/: completions.rs  config.rs  context.rs  item.rs  lib.rs  render.rs
crates/ide-completion/src/completions/: item_list.rs  path.rs  reference.rs
crates/ide-completion/src/context/: analysis.rs
crates/ide-completion/src/render/: function.rs  struct_or_enum.rs  type_owner.rs
crates/ide-db/: Cargo.toml
crates/ide-db/src/: active_parameter.rs  apply_change.rs  assist_config.rs  assist_context.rs  assists.rs  defs.rs  helpers.rs  imports.rs  label.rs  lib.rs  line_endings.rs  load.rs  new_root_db.rs  rename.rs  root_db.rs  search.rs  source_change.rs  symbol_index.rs  syntax_helpers.rs  text_edit.rs
crates/ide-db/src/symbol_index/: collector.rs  sym_db.rs
crates/ide-db/src/syntax_helpers/: tree_diff.rs
crates/ide-diagnostics/: Cargo.toml
crates/ide-diagnostics/src/: config.rs  diagnostic.rs  handlers.rs  lib.rs  tests.rs
crates/ide-diagnostics/src/handlers/: ability_checking.rs  call_params.rs  can_be_replaced_with_compound_expr.rs  can_be_replaced_with_index_expr.rs  can_be_replaced_with_method_call.rs  check_syntax.rs  error_const_docs.rs  field_shorthand.rs  missing_fields.rs  missing_type_arguments.rs  reduced_scope_import.rs  redundant_cast.rs  replace_with_friend.rs  replace_with_package.rs  replace_with_resource_index_expr.rs  simplify_turbofish.rs  spec_global_replace_with_index_expr.rs  type_checking.rs  unresolved_reference.rs  unused_acquires.rs  unused_import.rs  unused_variables.rs
crates/ide-tests/: Cargo.toml
crates/ide-tests-corpus/: Cargo.toml
crates/ide-tests-corpus/tests/: test_corpus.rs
crates/ide-tests/src/: completion.rs  fold.rs  hover.rs  ide_test_utils.rs  lib.rs  resolve.rs  test_abilities_key.rs  test_code_lens.rs  test_completion.rs  test_completion_functions.rs  test_completion_loops.rs  test_completion_methods.rs  test_completion_out_of_scope.rs  test_completion_relevance.rs  test_db.rs  test_diagnostics.rs  test_error_const_docs.rs  test_find_usages.rs  test_goto_specification.rs  test_inlay_hints.rs  test_inlay_parameter_hints.rs  test_inlay_type_hints.rs  test_load_dependencies.rs  test_missing_fields.rs  test_missing_value_arguments.rs  test_named_addresses.rs  test_organize_imports.rs  test_quick_docs.rs  test_rename.rs  test_replace_with_compound_expr.rs  test_replace_with_index_expr.rs  test_replace_with_method_call.rs  test_resolve_items.rs  test_resolve_types.rs  test_signature_help.rs  test_signature_help_struct_lit_fields.rs  test_signature_help_type_parameters.rs  test_signature_help_value_parameters.rs  test_syntax_errors.rs  test_syntax_highlighting.rs  (+8 more)
crates/ide-tests/src/completion/: test_completion.rs
crates/ide-tests/src/ide_test_utils/: completion_utils.rs  diagnostics.rs
crates/ide-tests/src/resolve/: test_resolve_1.rs  test_resolve_fs.rs  test_resolve_functions.rs  test_resolve_loop_labels.rs  test_resolve_modules.rs  test_resolve_proofs.rs  test_resolve_receiver_style_function.rs  test_resolve_specs.rs  test_resolve_struct_fields.rs  test_resolve_type_params.rs  test_resolve_types.rs  test_resolve_variables.rs
crates/ide-tests/src/test_diagnostics/: test_ability_checking.rs  test_check_syntax.rs  (+22 more)
crates/ide/src/: annotations.rs  extend_selection.rs  file_structure.rs  goto_definition.rs  goto_specification.rs  highlight_related.rs  hover.rs  inlay_hints.rs  lib.rs  navigation_target.rs  references.rs  rename.rs  runnables.rs  signature_help.rs  syntax_highlighting.rs  test_utils.rs  type_info.rs  typing.rs  view_syntax_tree.rs
crates/ide/tests/: test_completion.rs  test_resolve_items.rs  test_resolve_types.rs  test_syntax_errors.rs  test_syntax_highlighting.rs
crates/lang/: Cargo.toml
crates/lang/src/: builtin_files.rs  builtins_file.rs  crate_.rs  db.rs  files.rs  hir_db.rs  item_scope.rs  item_specs.rs  lib.rs  loc.rs  member_items.rs  name.rs  nameres.rs  node_ext.rs  semantics.rs  types.rs
crates/project-model/: Cargo.toml
crates/project-model/src/: aptos_package.rs  aptos_workspace.rs  dep_graph.rs  lib.rs  manifest_path.rs  move_toml.rs  project_folders.rs
crates/project-model/tests/: test_load_dependencies.rs
crates/syntax/: Cargo.toml  move.ungram
crates/syntax/src/: algo.rs  ast.rs  files.rs  lib.rs  line_index.rs  parse.rs  parsing.rs  pretty_print.rs  ptr.rs  syntax_editor.rs  syntax_error.rs  syntax_kind.rs  syntax_node.rs  ted.rs  token_text.rs  utils.rs  validation.rs
crates/syntax/tests/: parsing_test.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: fixtures.rs  lib.rs  testdir.rs  tracing.rs
crates/test_utils/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: codegen.rs  copyright.rs  dist.rs  install.rs  main.rs  testgen.rs
xtask/src/codegen/: grammar.rs
(+1382 files in other folders)
