[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
rust-version = "1.86.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
either = "1.13.0"
rowan = "=0.15.15"
itertools = "0.14.0"
lsp-types = { version = "=0.95.1", features = ["proposed"] }
line-index = "^0.1.2"
crossbeam-channel = "^0.5.15"
serde = "^1.0.217"
serde_derive = { version = "^1.0.192" }
serde_json = "^1.0.108"
anyhow = "^1.0.95"
clap = { version = "^4.5.28", features = ["derive"] }
indexmap = "^2.7.1"
toml = "^0.8.20"
walkdir = "^2.5.0"
regex = "1.11.1"

tracing = "^0.1.41"
tracing-tree = "^0.4.0"
tracing-subscriber = { version = "^0.3.18", default-features = false, features = [
    "registry",
    "fmt",
    "local-time",
    "std",
    "time",
    "tracing-log",
] }
dashmap = "6.1.0"
salsa = { git = "https://github.com/mkurnikov/salsa.git", rev = "769a0812161d0e42fd5b9b6efd8eff78042451d7" }
salsa-macros = { git = "https://github.com/mkurnikov/salsa.git", rev = "769a0812161d0e42fd5b9b6efd8eff78042451d7" }

stdx = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-05-05", package = "stdx" }
paths = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-05-05", package = "paths", features = ["serde1"] }
vfs = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-05-05", package = "vfs" }
vfs-notify = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-05-05", package = "vfs-notify" }

