[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
rust-version = "1.87.0"
edition = "2024"
license = "MIT"

[profile.dev.package]
# These speed up local tests.
rowan.opt-level = 3
text-size.opt-level = 3
serde.opt-level = 3
salsa.opt-level = 3

[workspace.dependencies]
either = "1.13.0"
rowan = "=0.15.15"
itertools = "0.14.0"
lsp-types = { version = "=0.95.1", features = ["proposed"] }
line-index = "^0.1.2"
crossbeam-channel = "^0.5.15"
serde = "^1.0.217"
serde_derive = { version = "^1.0.192" }
serde_json = "^1.0.108"
anyhow = "^1.0.95"
clap = { version = "^4.5.28", features = ["derive"] }
indexmap = "^2.7.1"
toml = "^0.8.20"
walkdir = "^2.5.0"
regex = "1.11.1"
camino = { version = "1.1.9", features = ["serde1"] }
memchr = "2.7.4"

tracing = "^0.1.41"
tracing-tree = "^0.4.0"
tracing-subscriber = { version = "^0.3.18", default-features = false, features = [
    "registry",
    "fmt",
    "local-time",
    "std",
    "time",
    "tracing-log",
    "env-filter"
] }
dashmap = "6.1.0"
salsa = "0.22.0"
salsa-macros = "0.22.0"

stdx = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-06-23", package = "stdx" }
paths = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-06-23", package = "paths", features = ["serde1"] }
vfs = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-06-23", package = "vfs" }
vfs-notify = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-06-23", package = "vfs-notify" }

