[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
rust-version = "1.90"
edition = "2024"
license = "MIT"

[profile.dev.package]
# These speed up local tests.
rowan.opt-level = 3
text-size.opt-level = 3
serde.opt-level = 3
salsa.opt-level = 3
dissimilar.opt-level = 3

# This speeds up `cargo xtask dist`.
miniz_oxide.opt-level = 3

[profile.dev]
debug = "line-tables-only"

[profile.dist]
inherits = "release"
lto = "fat"

[workspace.dependencies]
rowan = "=0.15.15"
lsp-types = { version = "=0.95.1" }
itertools = "0.14.0"
line-index = "^0.1.2"
crossbeam-channel = "^0.5.15"
serde = "^1.0.217"
serde_derive = { version = "^1.0.192" }
serde_json = "^1.0.108"
anyhow = "^1.0.95"
clap = { version = "^4.5.28", features = ["derive"] }
indexmap = "^2.7.1"
toml = "0.9.7"
walkdir = "^2.5.0"
regex = "1.11.1"
camino = { version = "1.2.0", features = ["serde1"] }
memchr = "2.7.4"

tracing = "^0.1.41"
tracing-tree = "^0.4.0"
tracing-subscriber = { version = "^0.3.18", default-features = false, features = [
    "registry",
    "fmt",
    "local-time",
    "std",
    "time",
    "tracing-log",
    "env-filter"
] }
dashmap = "6.1.0"
salsa = "0.23.0"
salsa-macros = "0.23.0"

stdx = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-07-07" }
paths = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-07-07", features = ["serde1"] }
vfs = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-07-07" }
vfs-notify = { git = "https://github.com/rust-lang/rust-analyzer.git", rev = "2025-07-07" }

