[package]
name = "xtask"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xshell = "0.2.7"
ungrammar = "1.16.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
check_keyword = "0.4"
flate2 = "1.1.0"
time = { version = "0.3", default-features = false }
zip = { version = "3", default-features = false, features = ["deflate-flate2", "time"] }

anyhow.workspace = true
clap.workspace = true
itertools.workspace = true
walkdir.workspace = true

stdx.workspace = true

