[package]
name = "base-db"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }

dashmap.workspace = true
salsa.workspace = true
salsa-macros.workspace = true

vfs = { workspace = true }

syntax = { path = "../syntax" }
