[package]
name = "ide-db"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indexmap.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true

itertools = { workspace = true }
line-index = { workspace = true }
tracing = { workspace = true }

salsa.workspace = true
salsa-macros.workspace = true

vfs = { workspace = true }
vfs-notify = { workspace = true }
stdx.workspace = true

base-db = { path = "../base-db" }
lang = { path = "../lang" }
syntax = { path = "../syntax" }
project-model = { path = "../project-model" }
