[package]
name = "ide-tests-corpus"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[[test]]
name = "test_corpus"
harness = false

[dependencies]
datatest-stable = "0.3.2"
expect-test = "1.5.1"

paths.workspace = true
codespan-reporting = "0.12.0"

ide-tests = { path = "../ide-tests" }
ide-diagnostics = { path = "../ide-diagnostics" }
ide-db = { path = "../ide-db" }
test-utils = { path = "../test-utils" }
