[package]
name = "ide-tests"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
expect-test = "1.5.1"

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
line-index.workspace = true
stdx.workspace = true

vfs.workspace = true

syntax = { path = "../syntax" }
test-utils = { path = "../test-utils" }
lang = { path = "../lang" }
ide = { path = "../ide" }
ide-db = { path = "../ide-db" }
ide-completion = { path = "../ide-completion" }
ide-diagnostics = { path = "../ide-diagnostics" }