[package]
name = "ide-tests"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
expect-test = "1.5.1"

stdx.workspace = true
paths.workspace = true

vfs.workspace = true

syntax = { path = "../syntax" }
test-utils = { path = "../test-utils" }
base-db = { path = "../base-db" }
lang = { path = "../lang" }
project-model = { path = "../project-model" }
ide = { path = "../ide" }
ide-db = { path = "../ide-db" }
ide-completion = { path = "../ide-completion" }
ide-diagnostics = { path = "../ide-diagnostics" }

[dev-dependencies]
datatest-stable = "0.3.2"