[package]
name = "ide"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vfs = { workspace = true }
line-index = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

dashmap.workspace = true
query-group-macro.workspace = true
salsa.workspace = true
salsa-macros.workspace = true

stdx = { workspace = true }

base-db = { path = "../base-db" }
syntax = { path = "../syntax" }
test_utils = { path = "../test_utils" }
lang = { path = "../lang" }
ide-db = { path = "../ide-db" }
ide-completion = { path = "../ide-completion" }
ide-diagnostics = { path = "../ide-diagnostics" }

[dev-dependencies]
itertools = { workspace = true }
expect-test = "1.5.1"
