[package]
name = "lang"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
enumset = "1.1.5"

itertools = { workspace = true }
tracing.workspace = true
salsa.workspace = true
salsa-macros.workspace = true
query-group-macro.workspace = true

stdx = { workspace = true }
vfs = { workspace = true }

parser = { path = "../parser" }
syntax = { path = "../syntax" }
base-db = { path = "../base-db" }
