[package]
name = "lang"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["salsa"]

[dependencies]
enumset = "1.1.5"

anyhow.workspace = true
regex.workspace = true
itertools = { workspace = true }
tracing.workspace = true
salsa.workspace = true
salsa-macros.workspace = true

stdx = { workspace = true }
vfs = { workspace = true }

syntax = { path = "../syntax" }
base-db = { path = "../base-db" }
