[package]
name = "project-model"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs = "6.0.0"
walkdir = "2.5.0"

toml = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
ra_salsa.workspace = true

anyhow = { workspace = true }
tracing = { workspace = true }

paths = { workspace = true }
vfs = { workspace = true }

base-db = { path = "../base-db" }
