[package]
name = "project-model"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]

[dependencies]
dirs = "6.0.0"

walkdir.workspace = true
toml = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }

stdx.workspace = true
paths = { workspace = true }
vfs = { workspace = true }

base-db = { path = "../base-db" }
