[package]
name = "test-utils"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dissimilar = "1.0.10"

tracing.workspace = true
tracing-subscriber.workspace = true
line-index.workspace = true
regex.workspace = true

paths.workspace = true
stdx.workspace = true
vfs.workspace = true

syntax = { path = "../syntax" }
base-db = { path = "../base-db" }
lang = { path = "../lang" }
ide = { path = "../ide" }
ide-db = { path = "../ide-db" }
project-model = { path = "../project-model" }
aptos-analyzer = { path = "../aptos-analyzer" }
